# boilerdaq

./: .all-contributorsrc  .copier-answers.yml  .coveragerc  .env  .gitattributes  .gitignore  .gitmodules  .justfile  .pre-commit-config.yaml  .prettierignore  .renovaterc.json  .root  .sourcery.yaml  .taplo.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  env.json  j.ps1  lock.json  params.yaml  params_schema.json  pyproject.toml  pytest.ini  renovate.json  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/: SECURITY.md  issue_template.md  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: general.yaml  ideas-for-docs.yaml  ideas-for-infrastructure.yaml  ideas.yaml  internal.yaml  q-a.yaml
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yaml  config.yml  internal.yaml
.github/workflows/: changerelease.yml  ci.yml  contrib.yml  env.yml  high.yml  main.yml  minimum.yml  release.yml
.tools/: pyproject.toml
.tools/requirements/: requirements.txt  requirements_both.txt  requirements_ci.txt  requirements_dev.txt  requirements_docs.txt
.tools/scripts/: Update-Boilercore.ps1  pythonstartup.py  update_requirements.py  update_submodule_requirements.py  warning_filters.py
changelog/: towncrier_template.md.jinja
config/: 1_scaled_params.csv  2_flux_params.csv  3_extrap_params.csv  extrap_params.csv  flux_params.csv  sensors.csv
config/cal/: 1_scaled_params.csv
config/run/: 0_sensors.csv  3_extrap_params.csv
data/: .gitignore  model.dillpickle.dvc
data/config/: 1_sensors.csv  4_extrap_params.csv  unit_types.csv
data/config/test/: sensors.csv
data/models/: modelfun-3.11.dillpickle.dvc  modelfun-3.12.dillpickle.dvc
docs/: conf.py  contributing.md  index.md  pyproject.toml
docs/boilerdaq_docs/: docstrings.py  intersphinx.py  types.py
examples/: cal.py  run.py
notebooks/: check_fit.ipynb  experiment.ipynb
requirements/: dev.in  nodeps.in  requirements.txt  uv.in
scripts/: Initialize-Linux.ps1  Initialize-Repo.ps1  Initialize-Shell.ps1  Sync-Py.ps1  Sync-Template.ps1  common.just  inst.just  pre.ps1  pyproject.toml
scripts/boilerdaq_tools/: CITATION.cff  __main__.py  add_changes.py  sync.py
src/: boilerdaq.py
src/boilerdaq/: __init__.py  daq.py  docs.py  dummy.py  notebooks.py  shim.py  types.py
src/boilerdaq/examples/: __init__.py  benchmark.py  calibrate.py  control.py  run.py  set_voltage.py  test.py
src/boilerdaq/examples/controlled/: __init__.py  benchmark.py  control.py  flux_control.py  set_voltage.py
src/boilerdaq/experiments/: __init__.py  steady.py
src/boilerdaq/models/: __init__.py  params.py  paths.py
src/boilerdaq/stages/: __init__.py  calibrate.py  run.py  test.py
src/boilerdaq/stages/controlled/: __init__.py  benchmark.py  control.py  flux_control.py  set_voltage.py  surface_control.py
tests/: __init__.py  conftest.py  pyproject.toml  test.py  test_boilerdaq.py  test_run.py
tests/boilerdaq_tests/: conftest.py  test_boilerdaq.py
tests/root/data/config/: 0_power_supplies.csv  2_scaled_params.csv  3_flux_params.csv
tests/root/data/models/: modelfun-3.11.dillpickle  modelfun-3.12.dillpickle
